tests/compile_fail/field_num_is_duplicated.stderr
error: field_num is duplicated in #[def(...)].
 --> $DIR/field_num_is_duplicated.rs:5:26
  |
5 |     #[def(field_num = 1, field_num = 2, def_type = "int32")]
  |                          ^^^^^^^^^^^^^
